[gd_scene load_steps=20 format=3 uid="uid://inu7j0nvmtss"]

[ext_resource type="Script" uid="uid://clluc44pxodcv" path="res://scenes/card_control.gd" id="1_6bi2t"]
[ext_resource type="Texture2D" uid="uid://dg6f6fw5vydvc" path="res://assets/sprites/Star_Sprite.png" id="2_71ok7"]
[ext_resource type="Shader" uid="uid://cw7il7wmvf1u0" path="res://child_control.gdshader" id="2_aa48w"]
[ext_resource type="Texture2D" uid="uid://b7nxhyhlbyidc" path="res://assets/sprites/Card_Background (5).png" id="2_vmg1y"]
[ext_resource type="Texture2D" uid="uid://sxxmae7ayvll" path="res://assets/sprites/Card_Color.png" id="3_vmg1y"]
[ext_resource type="FontFile" uid="uid://sree8ycs3b7j" path="res://assets/fonts/Gaegu-Bold.ttf" id="4_0fh5j"]
[ext_resource type="Texture2D" uid="uid://c3dv8qaboqe0s" path="res://assets/sprites/Card_Ribbon.png" id="4_aa48w"]
[ext_resource type="Texture2D" uid="uid://bqq5t7ktoorev" path="res://assets/sprites/cards/Tadpole-Kachu.png" id="4_vmg1y"]
[ext_resource type="Texture2D" uid="uid://f1bd6y15rwv4" path="res://assets/sprites/Card_Star.png" id="5_71ok7"]
[ext_resource type="Texture2D" uid="uid://chmhl8oddyka8" path="res://assets/sprites/Card_Unknown.png" id="8_vmg1y"]

[sub_resource type="Curve" id="Curve_svilk"]
_data = [Vector2(0, 1), 0.0, 0.236563, 0, 0, Vector2(0.508039, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_1u8w0"]
curve = SubResource("Curve_svilk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vneup"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_max = 200.0
angular_velocity_min = -156.83
angular_velocity_max = 160.4
gravity = Vector3(0, 98, 0)
scale_curve = SubResource("CurveTexture_1u8w0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_71ok7"]
resource_local_to_scene = true
shader = ExtResource("2_aa48w")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_size = 0.0
shader_parameter/alpha_threshold = 0.3
shader_parameter/outline_samples = 4
shader_parameter/shade_color = Color(1, 1, 1, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_4c57u"]
font = ExtResource("4_0fh5j")
font_size = 32
outline_size = 7
outline_color = Color(1, 0.588235, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vmg1y"]
line_spacing = -6.33
font = ExtResource("4_0fh5j")
font_size = 18
outline_size = 6
outline_color = Color(0, 0, 0, 0.294118)

[sub_resource type="LabelSettings" id="LabelSettings_x3eci"]
line_spacing = -6.33
font = ExtResource("4_0fh5j")
font_size = 22
outline_size = 6
outline_color = Color(0, 0, 0, 0.294118)

[sub_resource type="LabelSettings" id="LabelSettings_71ok7"]
resource_local_to_scene = true
line_spacing = -6.33
font = ExtResource("4_0fh5j")
font_size = 10
outline_size = 5
outline_color = Color(0.854902, 0.458824, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_aa48w"]
line_spacing = -6.33
font = ExtResource("4_0fh5j")
font_size = 58
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="CardControl" type="Control"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 280.0
pivot_offset = Vector2(100, 140)
mouse_default_cursor_shape = 2
script = ExtResource("1_6bi2t")
enabled_color = Color(1, 1, 1, 1)
disabled_color = Color(0.305882, 0.305882, 0.305882, 1)

[node name="ImpactParticles" type="GPUParticles2D" parent="."]
position = Vector2(95, 144)
scale = Vector2(4, 4)
emitting = false
amount = 16
texture = ExtResource("2_71ok7")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_vneup")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 140)
ratio = 0.7143

[node name="Control" type="Control" parent="AspectRatioContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Background" type="TextureRect" parent="AspectRatioContainer/Control"]
modulate = Color(0.524139, 0.55697, 0.585938, 1)
material = SubResource("ShaderMaterial_71ok7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.9972
offset_right = 39.9972
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vmg1y")
expand_mode = 2
stretch_mode = 5

[node name="PictureShadow" type="TextureRect" parent="AspectRatioContainer/Control"]
modulate = Color(0, 0, 0, 0.196078)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -38.0
offset_top = 1.99721
offset_right = 41.9944
offset_bottom = 1.99719
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vmg1y")
expand_mode = 2
stretch_mode = 5

[node name="Colors" type="TextureRect" parent="AspectRatioContainer/Control"]
modulate = Color(0.854902, 0.458824, 0.909804, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vmg1y")
expand_mode = 2
stretch_mode = 5

[node name="Picture" type="TextureRect" parent="AspectRatioContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.9972
offset_right = 39.9972
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vmg1y")
expand_mode = 2
stretch_mode = 5

[node name="Ribbon" type="TextureRect" parent="AspectRatioContainer/Control"]
modulate = Color(0.854902, 0.458824, 0.909804, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.9972
offset_right = 39.9972
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_aa48w")
expand_mode = 2
stretch_mode = 5

[node name="StarControl" type="Control" parent="AspectRatioContainer/Control"]
anchors_preset = 0
offset_left = 143.0
offset_top = 3.0
offset_right = 195.0
offset_bottom = 55.0
mouse_filter = 1

[node name="StarShadow" type="TextureRect" parent="AspectRatioContainer/Control/StarControl"]
modulate = Color(0, 0, 0, 0.156863)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(29, 29)
texture = ExtResource("5_71ok7")
expand_mode = 1
stretch_mode = 5

[node name="Star" type="TextureRect" parent="AspectRatioContainer/Control/StarControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(26, 26)
texture = ExtResource("5_71ok7")
expand_mode = 1
stretch_mode = 5

[node name="PowerLabel" type="Label" parent="AspectRatioContainer/Control/StarControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -21.0028
offset_right = 26.0
offset_bottom = 18.9972
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "5"
label_settings = SubResource("LabelSettings_4c57u")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="AspectRatioContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = 25.0
offset_right = 55.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Tadpole nerveux"
label_settings = SubResource("LabelSettings_vmg1y")
horizontal_alignment = 1

[node name="Description" type="Label" parent="AspectRatioContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 65.0028
offset_right = 64.0
offset_bottom = 114.003
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "meow meoowwwww"
label_settings = SubResource("LabelSettings_x3eci")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RarityLabel" type="Label" parent="AspectRatioContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = 49.0
offset_right = 52.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "COMMON"
label_settings = SubResource("LabelSettings_71ok7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="UnknownCardTexture" type="TextureRect" parent="AspectRatioContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -1.0
offset_right = 41.0
offset_bottom = 1.00562
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_vmg1y")
expand_mode = 2
stretch_mode = 5

[node name="CardCount" type="Label" parent="AspectRatioContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -122.0
offset_top = -38.9972
offset_bottom = 20.0028
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
text = "x2"
label_settings = SubResource("LabelSettings_aa48w")
horizontal_alignment = 2
